add firebase integration
